explicitly stated differently.

20070425 Request by Christian Sauer: polygon intersection
   paper with nice algorithm: http://citeseer.ist.psu.edu/cache/papers/cs/25021/http:zSzzSzfractal.dam.fmph.uniba.skzSz~sccgzSzproceedingszSz1998zSzZalik.pdf/zalik98quick.pdf
20121024 Request by Rick Rutgers: widening polygon contour

version 2.01:

	Improvements:
	- some more documentation and syntax tweaks

version 2.00: Thu  4 Sep 10:18:08 CEST 2025

	Changes:
	- Log::Report replaces die and Carp (causes bump of major version number)
	- requires Perl 5.16 (2012)
	- convert to OODoc 3.03 release process.

	Fixes:
	- polygon_same must also consider a mirrored result.
	  rt.cpan.org#169305 [Graham Knop]

	Improvements:
	- reduce rounding errors in centroid by default
	  rt.cpan.org#169306 [Graham Knop]
	- tip use of Math::BigFloat
	- restyle code and docs to match OODoc 2.03
	- all ::Transform functions can have the options as HASH as well

version 1.11: Fri  2 May 16:57:09 CEST 2025

	Fixes:
	- fix metadata [Mohammad S Anwar]
	- polygon_same broken tolerance parameter [Graham Knop]

	Improvements:
	- link to github distributions in meta-data.
	- centroid of line will result in middle.  For longer flat polys, it
	  will produce a clean error i.s.o "divide by zero". [Alex Sudakov]
	- add .gitignore

version 1.10: Wed  3 Jan 11:04:43 CET 2018
	Another release, to test releasing to github.

	Changes:
	- require perl 5.10

	Improvements:
	- documentation improvements

version 1.09: Wed  3 Jan 10:56:42 CET 2018
	Another release, to test releasing to github.

	Improvements:
	- format option to object string() and points()

version 1.08: Tue  2 Jan 12:01:29 CET 2018

	Improvements:
	- convert to GIT
	- move to GitHub
	- documentation improvements
	- indentation tabs should be blanks.

version 1.07: Wed 27 Dec 11:14:00 CET 2017

	Fixes:
	- float rounding issue in Perl >= 5.27 breaks tests [cpan_testers]

	Improvements:
	- new ::Calc::polygon_format()
